<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_product_list_sort"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/submenu_sort_name_desc"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/submenu_sort_name_desc"
                app:showAsAction="never" />
            <item
                android:id="@+id/submenu_sort_name_asc"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/submenu_sort_name_asc"
                app:showAsAction="never" />
            <item
                android:id="@+id/submenu_sort_description_desc"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/submenu_sort_description_desc"
                app:showAsAction="never" />
            <item
                android:id="@+id/submenu_sort_description_asc"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/submenu_sort_description_asc"
                app:showAsAction="never" />
            <item
                android:id="@+id/submenu_sort_value_desc"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/submenu_sort_value_desc"
                app:showAsAction="never" />
            <item
                android:id="@+id/submenu_sort_value_asc"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/submenu_sort_value_asc"
                app:showAsAction="never" />
            <item
                android:id="@+id/submenu_sort_no_sort"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/submenu_sort_no_sort"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>